All Airport Details showed

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -61,16 +61,67 @@
 
     </style>
 
-    <!-- ====================================================================== -->
+    <!-- ======================================================================
+            Top menu
+    -->
+
+    <style name="Menu_icon_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@drawable/bck_transparent</item>
+        <item name="android:paddingLeft">@dimen/tab_padding_side</item>
+        <item name="android:paddingRight">@dimen/tab_padding_side</item>
+        <item name="android:paddingTop">@dimen/tab_padding</item>
+        <item name="android:paddingBottom">@dimen/tab_padding</item>
+        <item name="android:minWidth">@dimen/tab_min_w</item>
+    </style>
+
+
+    <!-- ======================================================================
+            Dialog
+    -->
 
     <style name="FullScreenDialog">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
-
         <item name="android:windowBackground">?attr/backgroundColor</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">false</item>
     </style>
+
+    <!-- ======================================================================
+        Calculator - side menu
+    -->
+
+    <style name="Side_menu_category">
+        <item name="android:layout_height">@dimen/row_height</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">?attr/primaryColor</item>
+        <item name="android:textColor">?attr/highlightColor</item>
+        <item name="android:padding">@dimen/row_padding</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:elevation">@dimen/elevation_4</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="Side_menu_text">
+        <item name="android:layout_height">@dimen/row_height</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="android:padding">@dimen/row_padding</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="Side_menu_text.big">
+        <item name="android:layout_height">@dimen/row_big_height</item>
+    </style>
+
+
+    <!-- ======================================================================
+            Calculator - items
+    -->
 
     <style name="CalculatorLinearLayout">
         <item name="android:layout_width">match_parent</item>
@@ -123,16 +174,9 @@
         <item name="android:background">?attr/backgroundColorHighlight</item>
     </style>
 
-    <style name="Menu_icon_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@drawable/bck_transparent</item>
-        <item name="android:paddingLeft">@dimen/tab_padding_side</item>
-        <item name="android:paddingRight">@dimen/tab_padding_side</item>
-        <item name="android:paddingTop">@dimen/tab_padding</item>
-        <item name="android:paddingBottom">@dimen/tab_padding</item>
-        <item name="android:minWidth">@dimen/tab_min_w</item>
-    </style>
+    <!-- ======================================================================
+            Airplane Editor Dialog
+    -->
 
     <style name="Airplane_editor_table_layout">
         <item name="android:layout_width">match_parent</item>
@@ -151,6 +195,10 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:paddingTop">@dimen/row_divider</item>
     </style>
+
+    <!-- ======================================================================
+        Table blocks - settings and W&B
+    -->
 
     <style name="Block_title_text_style">
         <item name="android:layout_width">wrap_content</item>
@@ -215,39 +263,23 @@
         <item name="android:selectAllOnFocus">true</item>
     </style>
 
+    <!-- ======================================================================
+
+    -->
+
     <style name="NumberPickerStyle">
         <item name="android:divider">?attr/primaryColor</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
+
     <style name="NumberPickerStyleText">
         <item name="android:textColorPrimary">?attr/primaryTextColor</item>
     </style>
 
-    <style name="Side_menu_category">
-        <item name="android:layout_height">@dimen/row_height</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:background">?attr/primaryColor</item>
-        <item name="android:textColor">?attr/highlightColor</item>
-        <item name="android:padding">@dimen/row_padding</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:elevation">@dimen/elevation_4</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:gravity">center_horizontal</item>
-    </style>
-
-    <style name="Side_menu_text">
-        <item name="android:layout_height">@dimen/row_height</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:textColor">?attr/primaryTextColor</item>
-        <item name="android:padding">@dimen/row_padding</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:clickable">true</item>
-    </style>
-
-    <style name="Side_menu_text.big">
-        <item name="android:layout_height">@dimen/row_big_height</item>
-    </style>
+    <!-- ======================================================================
+        Home Fragment
+    -->
 
     <style name="Home_gps_data_layout">
         <item name="android:layout_width">0dp</item>
@@ -276,5 +308,30 @@
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
     </style>
+
+    <!-- ======================================================================
+        Detail Dialog
+    -->
+
+    <style name="Detail_airport_section">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:paddingTop">@dimen/row_padding</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="Detail_airport_section_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+    </style>
+
+    <style name="Detail_airport_section_text_big">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="android:textSize">@dimen/row_big_text</item>
+    </style>
+
 
 </resources>
