--- a/app/src/main/res/layout/fragment_docs.xml
+++ b/app/src/main/res/layout/fragment_docs.xml
@@ -5,12 +5,11 @@
               android:layout_height="match_parent"
               android:background="?attr/backgroundColor">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Documents"
-        android:id="@+id/txt_d"
-        android:layout_gravity="center_horizontal"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/docs_list">
+
+    </ListView>
 
 </LinearLayout>
