--- a/app/src/main/res/layout/dialog_detail_airport_section_tiem.xml
+++ b/app/src/main/res/layout/dialog_detail_airport_section_tiem.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Detail_airport_section">
 
     <TextView
@@ -8,7 +8,8 @@
 
     <TextView
         style="@style/Detail_airport_section_text"
-        android:id="@+id/detail_ap_section_text" />
+        android:id="@+id/detail_ap_section_text"
+        android:layout_below="@id/detail_ap_section_title"/>
 
 
-</LinearLayout>
+</RelativeLayout>
