--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -184,13 +184,42 @@
 
         </LinearLayout>
 
-        <lecho.lib.hellocharts.view.LineChartView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:layout_below="@id/home_gps_info_panel"
-            android:id="@+id/home_elevation_graph"
-            android:padding="@dimen/row_padding"
-            />
+            android:id="@+id/home_elevation_graph_panel"
+            android:padding="@dimen/row_padding">
+
+            <NumberPicker
+                android:id="@+id/home_elevation_graph_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:divider="?attr/primaryColor"
+                android:theme="@style/NumberPickerStyleText"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/calc_unit_km"
+                android:gravity="center_vertical"
+                android:textColor="?attr/primaryTextColor"
+                android:layout_marginEnd="@dimen/row_padding"/>
+
+            <lecho.lib.hellocharts.view.LineChartView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/home_elevation_graph"
+                android:padding="@dimen/row_padding"
+                />
+
+
+
+        </LinearLayout>
+
+
 
     </RelativeLayout>
 </LinearLayout>
