--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,13 +57,24 @@
                 android:background="?attr/backgroundDarkColor"
                 android:padding="@dimen/row_padding"
                 android:textColor="?attr/primaryTextColor"
-                android:id="@+id/home_fl_plan_btn" />
+                android:id="@+id/home_button_plan_top" />
 
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="?attr/backgroundColor"
                 android:id="@+id/home_plan_list"
                 android:visibility="gone"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_stop"
+                android:background="?attr/backgroundDarkColor"
+                android:padding="@dimen/row_padding"
+                android:textColor="?attr/primaryTextColor"
+                android:id="@+id/home_button_plan_bottom"
+                />
 
         </LinearLayout>
         
