--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentHome"
     android:background="?attr/backgroundColor"
-    android:id="@+id/home_screen"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -45,38 +44,44 @@
             android:layout_alignParentEnd="true"
             />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            >
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/home_fl_plan"
                 android:background="?attr/backgroundDarkColor"
                 android:padding="@dimen/row_padding"
                 android:textColor="?attr/primaryTextColor"
-                android:id="@+id/home_button_plan_top" />
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/backgroundColor"
-                android:id="@+id/home_plan_list"
-                android:visibility="gone"/>
+                android:id="@+id/home_button_plan_top"
+                android:layout_alignParentTop="true"/>
 
             <Button
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_stop"
                 android:background="?attr/backgroundDarkColor"
                 android:padding="@dimen/row_padding"
                 android:textColor="?attr/primaryTextColor"
                 android:id="@+id/home_button_plan_bottom"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"/>
 
-        </LinearLayout>
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?attr/backgroundColor"
+                android:id="@+id/home_plan_list"
+                android:visibility="gone"
+                android:layout_toEndOf="@id/home_button_plan_top"
+                android:layout_toStartOf="@id/home_button_plan_bottom"/>
+
+
+
+        </RelativeLayout>
         
         <ImageButton
             android:id="@+id/home_map_center"
