Map route markers fixed - no connecting lines, not saving, and no route displayed in list

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -23,8 +23,7 @@
         <attr name="greenColor" format="color"/>
         <attr name="redColor" format="color"/>
         <attr name="orangeColor" format="color"/>
-
-
+        <attr name="pinkColor" format="color"/>
 
     </declare-styleable>
     
