--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="colorOrangeDark">#d0742e</color>
     <color name="colorOrange">#fcb680</color>
 
+    <color name="colorPinkDark">#8f1287</color>
+    <color name="colorpink">#b32faa</color>
+
 </resources>
