Plan saved and displayed. No plan list appears though.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,6 @@
     <color name="colorOrange">#fcb680</color>
 
     <color name="colorPinkDark">#8f1287</color>
-    <color name="colorpink">#b32faa</color>
+    <color name="colorPink">#b32faa</color>
 
 </resources>
