--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,94 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentHome"
     android:background="?attr/backgroundColor"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:orientation="vertical">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="4"
+        android:orientation="horizontal"
+        android:elevation="@dimen/elevation_8"
+        android:id="@+id/home_gps_info_panel"
+        android:background="?attr/backgroundDarkColor"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout style="@style/Home_gps_data_layout">
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/home_gps_acc"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_big"
+                android:text="-"
+                android:id="@+id/home_data_accuracy"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/calc_unit_m"/>
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/Home_gps_data_layout">
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/home_gps_speed"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_big"
+                android:text="-"
+                android:id="@+id/home_data_speed"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/calc_unit_kn"/>
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/Home_gps_data_layout">
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/home_gps_alt"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_big"
+                android:text="-"
+                android:id="@+id/home_data_altitude"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/calc_unit_m"/>
+
+        </LinearLayout>
+
+        <LinearLayout style="@style/Home_gps_data_layout">
+            <TextView
+                style="@style/Home_gps_data_text_small"
+                android:text="@string/home_gps_bear"/>
+
+            <TextView
+                style="@style/Home_gps_data_text_big"
+                android:text="-"
+                android:id="@+id/home_data_bearing"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.7"
-        android:id="@+id/home_map_layout">
+        android:layout_height="wrap_content"
+        android:id="@+id/home_map_layout"
+        android:layout_above="@id/home_gps_info_panel">
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/home_map_view"
@@ -106,136 +182,4 @@
             android:layout_marginTop="@dimen/row_divider"/>
 
     </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.3"
-        android:id="@+id/home_panel_bottom"
-        android:orientation="vertical"
-        android:elevation="@dimen/elevation_8"
-        android:background="?attr/backgroundDarkColor">
-
-        <ImageButton
-            android:id="@+id/home_panel_bottom_btn"
-            android:layout_width="@dimen/float_button_size"
-            android:layout_height="@dimen/float_button_size"
-            android:src="@drawable/ic_expand_down_inv"
-            android:background="@drawable/bck_transparent"
-            android:gravity="end|center_vertical"
-            android:layout_gravity="end|center_vertical"
-            android:layout_alignParentEnd="true"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4"
-            android:orientation="horizontal"
-            android:id="@+id/home_gps_info_panel"
-            android:layout_marginEnd="@dimen/float_button_size">
-
-            <LinearLayout style="@style/Home_gps_data_layout">
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/home_gps_acc"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_big"
-                    android:text="-"
-                    android:id="@+id/home_data_accuracy"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/calc_unit_m"/>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Home_gps_data_layout">
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/home_gps_speed"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_big"
-                    android:text="-"
-                    android:id="@+id/home_data_speed"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/calc_unit_kn"/>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Home_gps_data_layout">
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/home_gps_alt"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_big"
-                    android:text="-"
-                    android:id="@+id/home_data_altitude"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/calc_unit_m"/>
-
-            </LinearLayout>
-
-            <LinearLayout style="@style/Home_gps_data_layout">
-                <TextView
-                    style="@style/Home_gps_data_text_small"
-                    android:text="@string/home_gps_bear"/>
-
-                <TextView
-                    style="@style/Home_gps_data_text_big"
-                    android:text="-"
-                    android:id="@+id/home_data_bearing"/>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_below="@id/home_gps_info_panel"
-            android:id="@+id/home_elevation_graph_panel"
-            android:padding="@dimen/row_padding">
-
-            <NumberPicker
-                android:id="@+id/home_elevation_graph_picker"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:divider="?attr/primaryColor"
-                android:theme="@style/NumberPickerStyleText"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/calc_unit_km"
-                android:gravity="center_vertical"
-                android:textColor="?attr/primaryTextColor"
-                android:layout_marginEnd="@dimen/row_padding"/>
-
-            <lecho.lib.hellocharts.view.LineChartView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/home_elevation_graph"
-                android:padding="@dimen/row_padding"
-                />
-
-
-
-        </LinearLayout>
-
-
-
-    </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
