--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,8 @@
 
             <TextView
                 style="@style/Home_gps_data_text_small"
-                android:text="@string/calc_unit_kn"/>
+                android:text="@string/calc_unit_kn"
+                android:id="@+id/home_data_speed_unit"/>
 
         </LinearLayout>
 
@@ -65,7 +66,8 @@
 
             <TextView
                 style="@style/Home_gps_data_text_small"
-                android:text="@string/calc_unit_m"/>
+                android:text="@string/calc_unit_m"
+                android:id="@+id/home_data_altitude_unit"/>
 
         </LinearLayout>
 
