--- a/app/src/main/res/layout/calc_wind.xml
+++ b/app/src/main/res/layout/calc_wind.xml
@@ -7,11 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="@dimen/row_padding"
             android:elevation="@dimen/elevation_8"
@@ -75,6 +73,14 @@
                     android:layout_centerVertical="true" />
 
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="?attr/primaryTextColor"
+                android:id="@+id/wind_metar"
+                android:gravity="center"
+                android:layout_marginBottom="@dimen/row_height"/>
 
             <TextView
                 android:layout_width="wrap_content"
