Airport type selection added

--- a/app/src/main/res/layout/dialog_selector.xml
+++ b/app/src/main/res/layout/dialog_selector.xml
@@ -57,8 +57,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/selector_list_headline"
         android:textColor="?attr/primaryTextColor"
-        android:layout_marginBottom="@dimen/row_padding_small"
-        android:layout_marginStart="@dimen/row_padding_small"/>
+        android:layout_marginBottom="@dimen/row_padding_small"/>
 
     <ListView
         android:layout_width="match_parent"
