--- a/app/src/main/res/layout/dialog_overlay_detail.xml
+++ b/app/src/main/res/layout/dialog_overlay_detail.xml
@@ -26,7 +26,8 @@
         android:orientation="vertical"
         android:layout_above="@id/detail_close"
         android:layout_margin="@dimen/row_padding"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
